--- a/index.html
+++ b/index.html
@@ -1,11 +1,88 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SetupMe</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="./imagens/imagem-logo.png" alt="">
+        </div>
+        <div class="input-pesquisa">
+            <nav class="menu">
+                <ul>
+                    <li><img class="menu-img" src="./imagens/menu-montagem.png" alt="Menu de montagem">
+                        <ul>
+                            <li>
+                                <a href="#">Montagem Gamer</a>
+                            </li>
+                            <li>
+                                <a href="#">Montagem Profissional</a>
+                            </li>
+                            <li>
+                                <a href="#">Montagem De Estudos</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+            <div class="search-box">
+                <input type="text" class="search-txt" placeholder="Pesquisar" name="Pesquisa">
+            </div>
+        </div>
+
+        </div>
+    </header>
+
+    <main>
+        <div class="slider autoplay">
+            <div class="slides">
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+                <input type="radio" name="radio-btn" id="radio4">
+
+                <div class="slide first">
+                    <img src="./imagens/imagem-slide1.svg" alt="Slide 1">
+                </div>
+                <div class="slide">
+                    <img src="./imagens/imagem-slide2.svg" alt="Slide 2">
+                </div>
+                <div class="slide">
+                    <img src="./imagens/imagem-slide3.svg" alt="Slide 3">
+                </div>
+                <div class="slide">
+                    <img src="./imagens/imagem-slide4.svg" alt="Slide 4">
+                </div>
+
+                <div class="navigation-auto">
+                    <div class="auto-btn1"></div>
+                    <div class="auto-btn2"></div>
+                    <div class="auto-btn3"></div>
+                    <div class="auto-btn4"></div>
+                </div>
+
+                <div class="navigation-manual">
+                    <label for="radio1" class="manual-btn"></label>
+                    <label for="radio2" class="manual-btn"></label>
+                    <label for="radio3" class="manual-btn"></label>
+                    <label for="radio4" class="manual-btn"></label>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="scripts.js"></script>
 </body>
+
 </html>
