--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./imagens/imagem-logo.png" alt="">
+            <img src="./resources/images/imagem-logo.png" alt="">
         </div>
         <div class="input-pesquisa">
             <nav class="menu">
                 <ul>
-                    <li><img class="menu-img" src="./imagens/menu-montagem.png" alt="Menu de montagem">
+                    <li><img class="menu-img" src="./resources/images/menu-montagem.png" alt="Menu de montagem">
                         <ul>
                             <li>
                                 <a href="#">Montagem Gamer</a>
@@ -53,16 +53,16 @@
                 <input type="radio" name="radio-btn" id="radio4">
 
                 <div class="slide first">
-                    <img src="./imagens/imagem-slide1.svg" alt="Slide 1">
+                    <img src="./resources/images/imagem-slide1.svg" alt="Slide 1">
                 </div>
                 <div class="slide">
-                    <img src="./imagens/imagem-slide2.svg" alt="Slide 2">
+                    <img src="./resources/images/imagem-slide2.svg" alt="Slide 2">
                 </div>
                 <div class="slide">
-                    <img src="./imagens/imagem-slide3.svg" alt="Slide 3">
+                    <img src="./resources/images/imagem-slide3.svg" alt="Slide 3">
                 </div>
                 <div class="slide">
-                    <img src="./imagens/imagem-slide4.svg" alt="Slide 4">
+                    <img src="./resources/images/imagem-slide4.svg" alt="Slide 4">
                 </div>
 
                 <div class="navigation-auto">
