--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./resources/images/imagem-logo.png" alt="">
+            <img src="./resources/images/imagem-logo.png" alt="logo site">
         </div>
         <div class="input-pesquisa">
             <nav class="menu">
@@ -24,20 +24,17 @@
                     <li><img class="menu-img" src="./resources/images/menu-montagem.png" alt="Menu de montagem">
                         <ul>
                             <li>
-                                <a href="#">Montagem Gamer</a>
+                                <a href="games.html">Montagem Gamer</a>
                             </li>
                             <li>
-                                <a href="#">Montagem Profissional</a>
-                            </li>
-                            <li>
-                                <a href="#">Montagem De Estudos</a>
+                                <a href="#">Montagem Profissional <br>& Estudos</a>
                             </li>
                         </ul>
                     </li>
                 </ul>
             </nav>
             <div class="search-box">
-                <input type="text" class="search-txt" placeholder="Pesquisar" name="Pesquisa">
+                <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
             </div>
         </div>
 
