--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -45,7 +45,7 @@
                 <div class="caixas">
                     <div id="box1">
                         <center><h3>BÁSICO</h3></center>
-                        <img class="basico" src=".resources/images/office.png" width="300px" height="150px">
+                        <img class="basico" src="./resources/images/office.png" width="300px" height="150px">
                         <input type="radio" id="basico" name="seleção" value="basico">
                         <center><label for="basico">Selecionar</label></center>
                         <p>Recomendado em uso de pacote Office (Excel, Word, Power Point, etc), navgador e extensões em geral, como o PDF.</p>
@@ -59,7 +59,7 @@
                     </div>
                     <div id="box3">
                         <center><h3>AVANÇADO</h3></center>
-                        <img class="avançado" src=".resources/images/editor-de-video.png" width="300px" height="150px">
+                        <img class="avançado" src="./resources/images/editor-de-video.png" width="300px" height="150px">
                         <input type="radio" id="avançado" name="seleção" value="avançado">
                         <center><label for="avançado">Selecionar</label></center>
                         <p>Recomendado em programas de edições de vídeo (Sony Vegas, DaVinci Resolve, etc), processamento de imagem (CorelDraw, 3DSMax, etc).</p>
