--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <a href="games.html">Montagem Gamer</a>
                             </li>
                             <li>
-                                <a href="#">Montagem Profissional <br>& Estudos</a>
+                                <a href="profissional-estudos.html">Montagem Profissional <br>& Estudos</a>
                             </li>
                         </ul>
                     </li>
