--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./resources/images/imagem-logo.png" alt="logo site">
+            <a href="index.html"><img src="./resources/images/imagem-logo.png" alt="logo site"></a>
         </div>
         <div class="input-pesquisa">
             <nav class="menu">
