--- a/games.html
+++ b/games.html
@@ -49,15 +49,15 @@
     <div class="container">
         <div class="imagens">
             <img src="./resources/images/fortnite.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/gta_v.svg" alt="">
-            <img src="./resources/images/apex_legends.svg" alt="">
-            <img src="./resources/images/lol.svg" alt="">
-            <img src="./resources/images/valorant.svg" alt="">
-            <img src="./resources/images/cs_go.svg" alt="">
-            <img src="./resources/images/minecraft.svg" alt="">
-            <img src="./resources/images/fifa_21.svg" alt="">
-            <img src="./resources/images/cod_warzone.svg" alt="">
-            <img src="./resources/images/dota_2.svg" alt="">
+            <img src="./resources/images/gta_v.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/apex_legends.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/lol.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/valorant.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/cs_go.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/minecraft.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/fifa_21.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/cod_warzone.svg" alt="" width="250px" height="400px">
+            <img src="./resources/images/dota_2.svg" alt="" width="250px" height="400px">
         </div>
     </div>
 </body>
