--- a/games.html
+++ b/games.html
@@ -8,7 +8,7 @@
     <title>Montagem Gamer</title>
 
     <link rel="stylesheet" href="./resources/css/games.css">
-    <link rel="stylesheet" href="resources/css/header.css">
+    <link rel="stylesheet" href="./resources/css/header.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
                                 <a href="games.html">Montagem Gamer</a>
                             </li>
                             <li>
-                                <a href="profissional-estudos.html">Montagem Profissional <br>/Estudos</a>
+                                <a href="profissional-estudos.html">Montagem Profissional <br>& Estudos</a>
                             </li>
                         </ul>
                     </li>
