alteracao montagem gamer

--- a/games.html
+++ b/games.html
@@ -47,17 +47,39 @@
     </div>
 
     <div class="container">
-        <div class="imagens">
-            <img src="./resources/images/fortnite.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/gta_v.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/apex_legends.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/lol.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/valorant.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/cs_go.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/minecraft.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/fifa_21.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/cod_warzone.svg" alt="" width="250px" height="400px">
-            <img src="./resources/images/dota_2.svg" alt="" width="250px" height="400px">
+        <div class="slider">
+            <div class="slide">       
+                <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/apex_legends.svg" alt="apex_legends" width="250px"
+                    height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/lol.svg" alt="lol" width="250px" height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/valorant.svg" alt="valorant" width="250px" height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/cs_go.svg" alt="cs_go" width="250px" height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/minecraft.svg" alt="minecraft" width="250px" height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/fifa_21.svg" alt="fifa_21" width="250px" height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/cod_warzone.svg" alt="cod_warzone" width="250px"
+                    height="400px">
+            </div>
+            <div class="slide">
+                <img src="./resources/images/dota_2.svg" alt="dota_2" width="250px" height="400px">
+            </div>
         </div>
     </div>
 </body>
