--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
@@ -54,13 +58,13 @@
                     <img src="./resources/images/imagem-slide1.svg" alt="Slide 1">
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/imagem-slide2.svg" alt="Slide 2">
+                    <a href="./profissional-estudos.html"><img src="./resources/images/imagem-slide2.svg" alt="Slide 2"></a>                  
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/imagem-slide3.svg" alt="Slide 3">
+                    <a href="./profissional-estudos.html"><img src="./resources/images/imagem-slide3.svg" alt="Slide 3"></a>                  
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/imagem-slide4.svg" alt="Slide 4">
+                    <a href="./games.html"><img src="./resources/images/imagem-slide4.svg" alt="Slide 4"></a>                   
                 </div>
 
                 <div class="navigation-auto">
