conexao front com back

--- a/games.html
+++ b/games.html
@@ -48,44 +48,55 @@
 
     <div class="titulo">
         <h1>Escolha o seu jogo:</h1>
-    </div>
+    </div>  
 
-    <div class="container">
-        <div class="slider">
-            <div class="slide">       
-                <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/apex_legends.svg" alt="apex_legends" width="250px"
-                    height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/lol.svg" alt="lol" width="250px" height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/valorant.svg" alt="valorant" width="250px" height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/cs_go.svg" alt="cs_go" width="250px" height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/minecraft.svg" alt="minecraft" width="250px" height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/fifa_21.svg" alt="fifa_21" width="250px" height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/cod_warzone.svg" alt="cod_warzone" width="250px"
-                    height="400px">
-            </div>
-            <div class="slide">
-                <img src="./resources/images/dota_2.svg" alt="dota_2" width="250px" height="400px">
+    <div>
+        <div class="left-arrow">
+            <img src="./resources/images/left-arrow.png" alt="seta esquerda" width="50px" height="50px">
+        </div>  
+        <div class="container">       
+            <div class="slider">
+                <div class="slide">
+                    <a href="fortnite.html">
+                        <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
+                    </a>                         
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/apex_legends.svg" alt="apex_legends" width="250px"
+                        height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/lol.svg" alt="lol" width="250px" height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/valorant.svg" alt="valorant" width="250px" height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/cs_go.svg" alt="cs_go" width="250px" height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/minecraft.svg" alt="minecraft" width="250px" height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/fifa_21.svg" alt="fifa_21" width="250px" height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/cod_warzone.svg" alt="cod_warzone" width="250px"
+                        height="400px">
+                </div>
+                <div class="slide">
+                    <img src="./resources/images/dota_2.svg" alt="dota_2" width="250px" height="400px">
+                </div>
             </div>
         </div>
+        <div class="right-arrow">
+            <img src="./resources/images/right-arrow.png" alt="seta direita" width="50px" height="50px">
+        </div>
     </div>
+    
 </body>
 
 </html>
