--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -12,10 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -42,37 +39,49 @@
                 <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
             </div>
         </div>
-        </header>
+    </header>
 
-        <head>
+    <head>
         <main>
             <div class="opcoes">
                 <div class="caixas">
                     <div id="box1">
-                        <center><h3>BÁSICO</h3></center>
+                        <center>
+                            <h3>BÁSICO</h3>
+                        </center>
                         <img class="basico" src="./resources/images/office.png" width="300px" height="150px">
                         <input type="radio" id="basico" name="seleção" value="basico">
                         <center><label for="basico">Selecionar</label></center>
-                        <p>Recomendado em uso de pacote Office (Excel, Word, Power Point, etc), navgador e extensões em geral, como o PDF.</p>
+                        <p>Recomendado em uso de pacote Office (Excel, Word, Power Point, etc), navgador e extensões em
+                            geral, como o PDF.</p>
                     </div>
                     <div id="box2">
-                        <center><h3>MÉDIO</h3></center>
+                        <center>
+                            <h3>MÉDIO</h3>
+                        </center>
                         <img class="medio" src="./resources/images/programaçao.png" width="300px" height="150px">
                         <input type="radio" id="medio" name="seleção" value="medio">
                         <center><label for="medio">Selecionar</label></center>
-                        <p>Recomendado em uso de programação (C++, Java, JavaScript, etc), Photoshop e programas para desenvolvimento em geral.</p>
+                        <p>Recomendado em uso de programação (C++, Java, JavaScript, etc), Photoshop e programas para
+                            desenvolvimento em geral.</p>
                     </div>
                     <div id="box3">
-                        <center><h3>AVANÇADO</h3></center>
+                        <center>
+                            <h3>AVANÇADO</h3>
+                        </center>
                         <img class="avançado" src="./resources/images/editor-de-video.png" width="300px" height="150px">
                         <input type="radio" id="avançado" name="seleção" value="avançado">
                         <center><label for="avançado">Selecionar</label></center>
-                        <p>Recomendado em programas de edições de vídeo (Sony Vegas, DaVinci Resolve, etc), processamento de imagem (CorelDraw, 3DSMax, etc).</p>
+                        <p>Recomendado em programas de edições de vídeo (Sony Vegas, DaVinci Resolve, etc),
+                            processamento de imagem (CorelDraw, 3DSMax, etc).</p>
                     </div>
-                    <center><a href="#" class="button">MONTAR</a></div></center>
+                    <center><a href="#" class="button">MONTAR</a>
                 </div>
+                </center>
+            </div>
 
             </div>
         </main>
-    </body>
+</body>
+
 </html>
