conexao api completa

--- a/games.html
+++ b/games.html
@@ -51,14 +51,11 @@
     </div>  
 
     <div>
-        <div class="left-arrow">
-            <img src="./resources/images/left-arrow.png" alt="seta esquerda" width="50px" height="50px">
-        </div>  
         <div class="container">       
             <div class="slider">
                 <div class="slide">
                     <a href="fortnite.html">
-                        <img src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
+                        <img onclick="getMotherboards()" src="./resources/images/fortnite.svg" alt="fortnite" width="250px" height="400px">
                     </a>                         
                 </div>
                 <div class="slide">
@@ -92,10 +89,10 @@
                 </div>
             </div>
         </div>
-        <div class="right-arrow">
-            <img src="./resources/images/right-arrow.png" alt="seta direita" width="50px" height="50px">
-        </div>
+        
     </div>
+
+    <script src="games.js"></script>
     
 </body>
 
