api para o html

--- a/fortnite.html
+++ b/fortnite.html
@@ -43,8 +43,11 @@
 
         </div>
     </header>
-    
+
     <h1 onclick="getMotherboards()">teste</h1>
-    <script src="games.js"></script>
+
+    <table id="table">Requisitos</table>
+
+    <script src="fortnite.js"></script>
 </body>
 </html>
