correcao api para o html

--- a/fortnite.html
+++ b/fortnite.html
@@ -48,6 +48,6 @@
 
     <table id="table">Requisitos</table>
 
-    <script src="fortnite.js"></script>
+    <script src="./resources/js/fortnite.js"></script>
 </body>
 </html>
