--- a/games.html
+++ b/games.html
@@ -92,7 +92,7 @@
         
     </div>
 
-    <script src="games.js"></script>
+    <script src="./resources/js/games.js"></script>
     
 </body>
 
