--- a/fortnite.html
+++ b/fortnite.html
@@ -14,10 +14,12 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+   
   />
 </head>
 <body>
     <header>
+        
         <div class="logo">
             <a href="index.html"><img src="./resources/images/imagem-logo.png" alt="logo site"></a>
         </div>
@@ -42,11 +44,18 @@
         </div>
 
         </div>
+   
     </header>
 
-    <h1 onclick="getMotherboards()">teste</h1>
+    <h1>Requisitos mínimos para jogar Fortnite:</h1>
 
-    <table id="table">Requisitos</table>
+    
+    <div id="table">
+        <div id="vb"></div>
+        <div id="vm"></div>
+        <div id="pr"></div>
+        <div id="ram"></div>
+    </div>
 
     <script src="./resources/js/fortnite.js"></script>
 </body>
