--- a/games.html
+++ b/games.html
@@ -59,37 +59,54 @@
                     </a>                         
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
+                    <a href="gtav.html">
+                        <img src="./resources/images/gta_v.svg" alt="gta_v" width="250px" height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/apex_legends.svg" alt="apex_legends" width="250px"
+                    <a href="apex-legends.html">
+                        <img src="./resources/images/apex_legends.svg" alt="apex_legends" width="250px"
                         height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/lol.svg" alt="lol" width="250px" height="400px">
+                    <a href="lol.html">
+                        <img src="./resources/images/lol.svg" alt="lol" width="250px" height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/valorant.svg" alt="valorant" width="250px" height="400px">
+                    <a href="valorant.html">
+                        <img src="./resources/images/valorant.svg" alt="valorant" width="250px" height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/cs_go.svg" alt="cs_go" width="250px" height="400px">
+                    <a href="csgo.html">
+                        <img src="./resources/images/cs_go.svg" alt="cs_go" width="250px" height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/minecraft.svg" alt="minecraft" width="250px" height="400px">
+                    <a href="minecraft.html">
+                        <img src="./resources/images/minecraft.svg" alt="minecraft" width="250px" height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/fifa_21.svg" alt="fifa_21" width="250px" height="400px">
+                    <a href="fifa21.html">
+                        <img src="./resources/images/fifa_21.svg" alt="fifa_21" width="250px" height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/cod_warzone.svg" alt="cod_warzone" width="250px"
+                    <a href="warzone.html">
+                        <img src="./resources/images/cod_warzone.svg" alt="cod_warzone" width="250px"
                         height="400px">
+                    </a>
                 </div>
                 <div class="slide">
-                    <img src="./resources/images/dota_2.svg" alt="dota_2" width="250px" height="400px">
+                    <a href="dota2.html">
+                        <img src="./resources/images/dota_2.svg" alt="dota_2" width="250px" height="400px">
+                    </a>
                 </div>
             </div>
         </div>
-        
     </div>
 
     <script src="./resources/js/games.js"></script>
