Montagem média e avançada adicionado
salve

--- a/montagem-avancado.html
+++ b/montagem-avancado.html
@@ -39,6 +39,14 @@
 
     <h1>Montagem Avançada:</h1>
 
+    <div id="table">
+        <div id="pr"></div>
+        <div id="ram"></div>
+        <div id="mb"></div>
+        <div id="stg"></div>
+        <div id="pv"></div>
+    </div>
+
     <script src="./resources/js/montagem-avancada.js"></script>
 </body>
 </html>
