--- a/montagem-medio.html
+++ b/montagem-medio.html
@@ -39,6 +39,14 @@
 
     <h1>Montagem Média:</h1>
 
+    <div id="table">
+        <div id="pr"></div>
+        <div id="ram"></div>
+        <div id="mb"></div>
+        <div id="stg"></div>
+        <div id="pv"></div>
+    </div>
+
     <script src="./resources/js/montagem-media.js"></script>
 </body>
 </html>
