--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
                 </ul>
             </nav>
             <div class="search-box">
-                <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
+                <input type="text" id="pesquisa" class="search-txt" placeholder="  Pesquisar" name="Pesquisa" list="searchComponents">
+                <datalist id="searchComponents">
+                    <option onclick="mbsearch()" id="MBsearch" value="Placa mãe"></option>
+                    <option value="Placa de vídeo"></option>
+                    <option value="Processador"></option>
+                    <option value="Memória RAM"></option>
+                    <option value="Armazenamento"></option>
+                </datalist>
             </div>
         </div>
 
