--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -68,11 +68,10 @@
                     <p>Recomendado em programas de edições de vídeo (Sony Vegas, DaVinci Resolve, etc),
                         processamento de imagem (CorelDraw, 3DSMax, etc).</p> 
                 </div>
-               <center><a href="#" class="button" onclick="checkBasico(), checkMedio(), checkAvancado()">MONTAR</a>
             </div>
         </div>
     </main>
-
+    <center><a href="#" class="button" onclick="checkBasico(), checkMedio(), checkAvancado()">MONTAR</a></center>
     <script src="./resources/js/profissional-estudos.js"></script>
 </body>
 
