--- a/profissional-estudos.html
+++ b/profissional-estudos.html
@@ -71,8 +71,10 @@
             </div>
         </div>
     </main>
-    <center><a href="#" class="button" onclick="checkBasico(), checkMedio(), checkAvancado()">MONTAR</a></center>
+    <center>
+        <div id="warning"></div>
+        <a href="#" class="button" onclick="checkBasico(), checkMedio(), checkAvancado(), noCheck()">MONTAR</a>
+    </center>
     <script src="./resources/js/profissional-estudos.js"></script>
 </body>
-
 </html>
