--- a/montagem-avancado.html
+++ b/montagem-avancado.html
@@ -15,6 +15,7 @@
             <a href="index.html"><img src="./resources/images/imagem-logo.png" alt="logo site"></a>
         </div>
         <div class="input-pesquisa">
+            <a href="simulador.html"><img id="simulador" src="./resources/images/simulador.png" alt="Simulador"></a>
             <nav class="menu">
                 <ul>
                     <li><img class="menu-img" src="./resources/images/menu-montagem.png" alt="Menu de montagem">
