--- a/simulador.html
+++ b/simulador.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Montagem CS:GO</title>
+    <title>Simulador</title>
 
     <link rel="stylesheet" href="./resources/css/header.css">
-    <link rel="stylesheet" href="./resources/css/gtav.css">
+    <link rel="stylesheet" href="./resources/css/simulador.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;700&display=swap" rel="stylesheet">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
+
 <body>
     <header>
-        
         <div class="logo">
             <a href="index.html"><img src="./resources/images/imagem-logo.png" alt="logo site"></a>
         </div>
@@ -38,23 +37,38 @@
                 </ul>
             </nav>
             <div class="search-box">
-                <input type="text" class="search-txt" placeholder="  Pesquisar" name="Pesquisa">
+                <input type="text" id="pesquisa" class="search-txt" placeholder="  Pesquisar" name="Pesquisa"
+                    list="searchComponents">
+                <datalist id="searchComponents">
+                    <option onclick="mbsearch()" id="MBsearch" value="Placa mãe"></option>
+                    <option value="Placa de vídeo"></option>
+                    <option value="Processador"></option>
+                    <option value="Memória RAM"></option>
+                    <option value="Armazenamento"></option>
+                </datalist>
             </div>
         </div>
 
         </div>
-   
     </header>
 
-    <h1>Requisitos mínimos para jogar CS:GO :</h1>
-
-    <div id="table">
-        <div id="vb"></div>
-        <div id="vm"></div>
-        <div id="pr"></div>
-        <div id="ram"></div>
+    <div id="container">
+        <section>
+            <div>Processador</div>
+        </section>
+        <section>
+            <div>Placa mãe</div>
+        </section>
+        <section>
+            <div>Placa de vídeo</div>
+        </section>
+        <section>
+            <div>Memória RAM</div>
+        </section>
+        <section>
+            <div>Armazenamento</div>
+        </section>
     </div>
-
-    <script src="./resources/js/csgo.js"></script>
 </body>
+
 </html>
