--- a/simulador.html
+++ b/simulador.html
@@ -52,23 +52,57 @@
         </div>
     </header>
 
-    <div id="container">
-        <section>
-            <div>Processador</div>
-        </section>
-        <section>
-            <div>Placa mãe</div>
-        </section>
-        <section>
-            <div>Placa de vídeo</div>
-        </section>
-        <section>
-            <div>Memória RAM</div>
-        </section>
-        <section>
-            <div>Armazenamento</div>
-        </section>
+    <div id="title">
+        <h2>Monte do seu jeito</h2>
     </div>
+
+    <main>
+        <div id="container">
+            <div id="processador">
+                <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador">
+                <div class="menu-processador">
+                    <p>Processador</p>
+                    <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px" height="30px">
+                </div>
+            </div>
+            <div>
+                <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
+                <div>
+                    <p>Placa de vídeo</p>
+                </div>
+            </div>
+            <div>
+                <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
+                <div>
+                    <p>Placa mãe</p>
+                </div>
+            </div>
+            <div>
+                <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
+                <div>
+                    <p>Memória RAM</p>
+                </div>
+            </div>
+            <div>
+                <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
+                <div>
+                    <p>HD</p>
+                </div>
+            </div>
+            <div>
+                <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
+                <div>
+                    <p>SSD</p>
+                </div>
+            </div>
+            <div>
+                <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
+                <div>
+                    <p>Fonte</p>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
