Update setinha e logo

--- a/simulador.html
+++ b/simulador.html
@@ -58,12 +58,13 @@
 
     <main>
         <div id="container">
-            <div id="processador">
-                <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador">
+            <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px" height="50px">
                 <div class="menu-processador">
                     <p>Processador</p>
-                    <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px" height="30px">
+                    <div id="setinha">
+                    <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px" height="15px">
                 </div>
+            </div>
             </div>
             <div>
                 <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
