--- a/simulador.html
+++ b/simulador.html
@@ -58,6 +58,7 @@
 
     <main>
         <div id="container">
+            <div id="processador">
             <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px" height="50px">
                 <div class="menu-processador">
                     <p>Processador</p>
