--- a/simulador.html
+++ b/simulador.html
@@ -53,58 +53,99 @@
     </header>
 
     <div id="title">
-        <h2>Monte do seu jeito</h2>
+        <p>Monte do seu jeito</p>
     </div>
 
     <main>
         <div id="container">
             <div id="processador">
-            <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px" height="50px">
-                <div class="menu-processador">
-                    <p>Processador</p>
-                    <div id="setinha">
-                    <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px" height="15px">
-                </div>
+                <img src="./resources/images/processador-simulador.png" alt="Imagem de um processador" width="50px"
+                    height="50px">
+                <p>Processador</p>
+                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
+                    height="30px">
+
             </div>
-            </div>
-            <div>
+            <ul class="lista-simulador">
+                <li id="processador1"></li>
+                <li id="processador2"></li>
+                <li id="processador3"></li>
+                <li id="processador4"></li>
+            </ul>
+            <div id="processador">
                 <img src="./resources/images/placa-video-simulador.png" alt="Imagem de uma placa de vídeo">
-                <div>
-                    <p>Placa de vídeo</p>
-                </div>
+                <p>Placa de vídeo</p>
+                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
+                    height="30px">
+
             </div>
-            <div>
+            <ul class="lista-simulador">
+                <li id="placa_video1"></li>
+                <li id="placa_video2"></li>
+                <li id="placa_video3"></li>
+                <li id="placa_video4"></li>
+            </ul>
+            <div id="processador">
                 <img src="./resources/images/placa-mae-simulador.png" alt="Imagem de uma placa mãe">
-                <div>
-                    <p>Placa mãe</p>
-                </div>
+                <p>Placa mãe</p>
+                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
+                    height="30px">
+
             </div>
-            <div>
+            <ul class="lista-simulador">
+                <li id="placa_mae1"></li>
+                <li id="placa_mae2"></li>
+                <li id="placa_mae3"></li>
+                <li id="placa_mae4"></li>
+            </ul>
+            <div id="processador">
                 <img src="./resources/images/memoriaram-simulador.png" alt="Imagem de uma memória RAM">
-                <div>
-                    <p>Memória RAM</p>
-                </div>
+                <p>Memória RAM</p>
+                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
+                    height="30px">
+
             </div>
-            <div>
+            <ul class="lista-simulador">
+                <li id="memoria_ram1"></li>
+                <li id="memoria_ram2"></li>
+                <li id="memoria_ram3"></li>
+            </ul>
+            <div id="processador">
                 <img src="./resources/images/hd-simulador.png" alt="Imagem de um HD">
-                <div>
-                    <p>HD</p>
-                </div>
+                <p>HD</p>
+                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
+                    height="30px">
+
             </div>
-            <div>
+            <ul class="lista-simulador">
+                <li id="hd1"></li>
+                <li id="hd2"></li>
+            </ul>
+            <div id="processador">
                 <img src="./resources/images/ssd-simulador.png" alt="Imagem de um SSD">
-                <div>
-                    <p>SSD</p>
-                </div>
+                <p>SSD</p>
+                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
+                    height="30px">
+
             </div>
-            <div>
+            <ul class="lista-simulador">
+                <li id="ssd1"></li>
+                <li id="ssd2"></li>
+            </ul>
+            <div id="processador">
                 <img src="./resources/images/fonte-simulador.png" alt="Imagem de uma fonte">
-                <div>
-                    <p>Fonte</p>
-                </div>
+                <p>Fonte</p>
+                <img src="./resources/images/down-arrow.png" alt="Imagem de uma seta para baixo" width="30px"
+                    height="30px">
             </div>
+            <ul class="lista-simulador active">
+                <li id="fontes1"></li>
+                <li id="fontes2"></li>
+            </ul>
         </div>
     </main>
+
+    <script src="./resources/js/simulador.js"></script>
 </body>
 
 </html>
